src/objects/ADvendio__BriefingScript__c.object
<CustomObject>
    <description>Scripts will be the draft of the client requirement for the ads.</description>
    <fields>
        <fullName>ADvendio__Background__c</fullName>
        <description>Background from the Advertisers Company/Business context.</description>
        <inlineHelpText>Background from the Advertisers Company/Business context</inlineHelpText>
        <label>Background</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ADvendio__CampaignItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the related campaign item</description>
        <inlineHelpText>Reference to the related campaign item</inlineHelpText>
        <label>Campaign Item</label>
        <referenceTo>ADvendio__Campaign_Item__c</referenceTo>
        <relationshipName>BriefingScripts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Client contact details</description>
        <inlineHelpText>Client contact details</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>BriefingScripts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__Goal__c</fullName>
        <description>Goal of the AD</description>
        <inlineHelpText>Goal of the AD</inlineHelpText>
        <label>Goal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Get direct responce</fullName>
                </value>
                <value>
                    <fullName>Reinforce an existing brand/Product</fullName>
                </value>
                <value>
                    <fullName>Introduce sonthing new</fullName>
                </value>
                <value>
                    <fullName>Announce sales/special/event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__Headline__c</fullName>
        <description>What will be the Headline key Massage for that AD?</description>
        <inlineHelpText>What will be the Headline key Massage for that AD?</inlineHelpText>
        <label>Headline</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__LevelOfCreativity__c</fullName>
        <description>What is the Level of Creativity for this AD?</description>
        <inlineHelpText>What is the Level of Creativity for this AD?</inlineHelpText>
        <label>Level of Creativity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Follow layout exactly</fullName>
                </value>
                <value>
                    <fullName>Some interpretation</fullName>
                </value>
                <value>
                    <fullName>Use artistic expression</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__LookAndFeelDescription__c</fullName>
        <description>Describe the details about the Look and Feel of this AD</description>
        <inlineHelpText>Describe the details about the Look and Feel of this AD</inlineHelpText>
        <label>Look and Feel description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__LookAndFeel__c</fullName>
        <description>What is the Look and Feel for this AD?</description>
        <inlineHelpText>What is the Look and Feel for this AD?</inlineHelpText>
        <label>Look and Feel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Simple and clean</fullName>
                </value>
                <value>
                    <fullName>Soft, pastel colors</fullName>
                </value>
                <value>
                    <fullName>Bold, bright colors</fullName>
                </value>
                <value>
                    <fullName>Exclusive and expensive</fullName>
                </value>
                <value>
                    <fullName>Warm, friendly infinity</fullName>
                </value>
                <value>
                    <fullName>Ruged, masculine look that appeals to men</fullName>
                </value>
                <value>
                    <fullName>Feminine look that appeals to women</fullName>
                </value>
                <value>
                    <fullName>Whimsical and fun design</fullName>
                </value>
                <value>
                    <fullName>Classical, sophisticated, upscale look</fullName>
                </value>
                <value>
                    <fullName>Trendy, hip design that appeals to college age</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__MediaDifferentiation__c</fullName>
        <description>What is the Media Differentiation for this AD?</description>
        <inlineHelpText>What is the Media Differentiation for this AD?</inlineHelpText>
        <label>Media Differentiation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ADvendio__MediaDifferentiation</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__MediaSegment__c</fullName>
        <description>What is the Media Segment for this AD?</description>
        <inlineHelpText>What is the Media Segment for this AD?</inlineHelpText>
        <label>Media Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ADvendio__MediaSegment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__MediaType__c</fullName>
        <description>What is the Media Type for this AD?</description>
        <inlineHelpText>What is the Media Type for this AD?</inlineHelpText>
        <label>Media Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ADvendio__MediaType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__Number__c</fullName>
        <description>The AD number</description>
        <displayFormat>AD-{000000}</displayFormat>
        <inlineHelpText>The AD number</inlineHelpText>
        <label>Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ADvendio__PublicationDate__c</fullName>
        <description>deprecated</description>
        <inlineHelpText>Will be auto populated from the campaign items selected publication date</inlineHelpText>
        <label>Publication Date (deprecated)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__PublicationName__c</fullName>
        <description>Publication Name will be auto populated with the site name related to the campaign item.</description>
        <formula>ADvendio__CampaignItem__r.ADvendio__Ad_Price__r.ADvendio__Ad_Spec__r.ADvendio__Placement__r.ADvendio__Site__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Will be auto populated with the site name of the related campaign item</inlineHelpText>
        <label>Publication Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Reason__c</fullName>
        <description>Why a Person from the Target Group should use the Offer/USP/SMP?</description>
        <inlineHelpText>Why a Person from the Target Group should use the Offer/USP/SMP?</inlineHelpText>
        <label>Reason</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ADvendio__SentToClientAd__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies if the AD is sent to client for approval or not. If True than AD sent to client for approval
otherwise AD is not sent to client for approval.</description>
        <inlineHelpText>Specifies if the AD is sent to client for approval or not</inlineHelpText>
        <label>Sent to Client (AD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__SentToClientScript__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies if the script is sent to client for approval or not. If True the script is sent to client for approval otherwise it is not.</description>
        <inlineHelpText>Specifies if the script is sent to client for approval or not</inlineHelpText>
        <label>Sent to Client (Script)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__Status__c</fullName>
        <description>Status of the script</description>
        <inlineHelpText>Status of the script</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Script</fullName>
                    <default>true</default>
                    <label>New Script</label>
                </value>
                <value>
                    <fullName>Script Pending manager approval</fullName>
                </value>
                <value>
                    <fullName>Script Rejected by Manager</fullName>
                </value>
                <value>
                    <fullName>Script Pending Client approval</fullName>
                </value>
                <value>
                    <fullName>Script Rejected by Client</fullName>
                </value>
                <value>
                    <fullName>Script Approved</fullName>
                </value>
                <value>
                    <fullName>Advertise Pending manager approval</fullName>
                </value>
                <value>
                    <fullName>Advertise Rejected by Manager</fullName>
                </value>
                <value>
                    <fullName>Advertise Pending Client approval</fullName>
                </value>
                <value>
                    <fullName>Advertise Rejected by Client</fullName>
                </value>
                <value>
                    <fullName>Advertise Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__TargetProfile__c</fullName>
        <description>Target profile</description>
        <inlineHelpText>Target profile</inlineHelpText>
        <label>Target Profile</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ADvendio__Text__c</fullName>
        <description>Description for the script.</description>
        <inlineHelpText>Description for the script</inlineHelpText>
        <label>Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ADvendio__UniqueKey__c</fullName>
        <defaultValue>Text(today())</defaultValue>
        <description>Unique Key</description>
        <inlineHelpText>Unique Key</inlineHelpText>
        <label>Unique Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Url__c</fullName>
        <description>URL may include a link to the ad files.</description>
        <inlineHelpText>URL may include a link to the ad files</inlineHelpText>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ADvendio__UspSmpOffer__c</fullName>
        <description>What is the USP/SMP/Offer for this AD? Significant market power, in economics, the ability of a firm to alter the market price of a good or service.</description>
        <inlineHelpText>What is the USP/SMP/Offer for this AD?</inlineHelpText>
        <label>USP/SMP/Offer</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Briefing Script</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Briefing Script Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Briefing Scripts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>